# v2x2map

./: .gitignore  LICENSE  README.md
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/opentrafficmap/receiver/: AboutActivity.kt  BluetoothController.kt  CycleSettingsDialog.kt  Frame.kt  FrameLogAdapter.kt  (+11 more)
android/app/src/main/res/drawable/: ic_marker_arrow.xml  ic_marker_dot.xml  ic_my_location.xml  ic_settings.xml
android/app/src/main/res/layout/: activity_about.xml  activity_main.xml  activity_settings.xml  dialog_cycle_settings.xml  item_frame.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/xml/: usb_device_filter.xml
bridge/: build_deb.py  build_exe.ps1  dashboard.html  dashboard_server.py  its-g5-bridge.spec  its_g5_bridge.py  setup_main.py  setup_wizard.py
docs/: privacy.html
firmware/: CMakeLists.txt  partitions_4M.csv  partitions_8M.csv  sdkconfig  sdkconfig.proto-enc28j60  sdkconfig.proto-w5500
firmware/main/: CMakeLists.txt  Kconfig.projbuild  bt_stream.c  bt_stream.h  cmd_sniffer.c  cmd_sniffer.h  config.c  config.h  ethernet.c  ethernet.h  events.c  events.h  idf_component.yml  led.c  led.h  main.c  mqtt.c  mqtt.h  ota.c  ota.h  sdcard.c  sdcard.h  spi.c  spi.h  temperature.c  temperature.h  usb_stream.c  usb_stream.h  wifi_manager.c  wifi_manager.h
